# SolARModuleRealSense

./: .gitignore  CMakeLists.txt  JenkinsFile  README.adoc  README.md  SolARModuleRealSense.pri  SolARModuleRealSense.pro  SolARModuleRealSense_resource.aps  bcom-SolARModuleRealSense.pc.in  packagedependencies-win.txt  packagedependencies.txt  xpcf_SolARModuleRealSense_registry.xml
interfaces/: SolARModuleRealSense_traits.h  SolARRGBDCameraRealSense.h  SolARRealSenseAPI.h  SolARStereoCameraRealSense.h
src/: SolARModuleRealSense.cpp  SolARRGBDCameraRealSense.cpp  SolARStereoCameraRealSense.cpp
tests/SolARRGBDCameraTest/: SolARRGBDCameraTest.pro  SolARRGBDCameraTest_conf.xml  bcom-SolARRGBDCameraTest.pc.in  main.cpp  packagedependencies.txt
tests/SolARTestRealSenseRGBDCamera/: SolARTestRealSenseRGBDCamera.pro  SolARTestRealSenseRGBDCamera_conf.xml  bcom-SolARTestRealSenseRGBDCamera.pc.in  main.cpp  packagedependencies.txt
tests/SolARTest_ModuleRealSense_RGBDCamera/: SolARTest_ModuleRealSense_RGBDCamera.pro  SolARTest_ModuleRealSense_RGBDCamera.xml  SolARTest_ModuleRealSense_RGBDCamera_conf.xml  bcom-SolARTest_ModuleRealSense_RGBDCamera.pc.in  main.cpp  packagedependencies.txt
tests/SolARTest_ModuleRealSense_StereoCamera/: SolARTest_ModuleRealSense_StereoCamera.pro  SolARTest_ModuleRealSense_StereoCamera_conf.xml  main.cpp
